_content/css: fix image background color in dark mode
Transparent images on the doc pages assume there is a white background.
This change preserves the white background for images when the site is
viewed with the dark theme.

For golang/go#34601.

Reviewed-on: https://go-review.googlesource.com/c/website/+/392479
Run-TryBot: Jamal Carvalho <jamal@golang.org>
TryBot-Result: Gopher Robot <gobot@golang.org>
Trust: Jamal Carvalho <jamalcarvalho@google.com>

--- a/_content/css/styles.css
+++ b/_content/css/styles.css
@@ -660,6 +660,9 @@ h1 + h2.subtitle {
 .Article pre {
   margin-left: 1.5rem;
 }
+.Article.Doc img {
+  background-color: var(--white);
+}
 .BreadcrumbNav-inner {
   display: flex;
   flex-wrap: wrap;
@@ -3719,7 +3722,7 @@ img.PullQuote-image {
   fill: var(--color-text);
 }
 #blog .image > img {
-  background-color: var(--color-text);
+  background-color: var(--white);
 }
 #blogindex p.blogtitle a {
   font-weight: bold;
